# SIK-radio-sender-and-receiver

./: CMakeLists.txt  README.md  console_codes.cc  console_codes.h  datagrams.cc  datagrams.h  debug.cc  debug.h  err.h  fifo.h  host_and_net.cc  host_and_net.h  menu.cc  menu.h  numbers.h  program_args.h  radio_channel.h  sikradio-receiver.cc  sikradio-sender.cc  sikreceiver_audio_player.h  sikreceiver_audio_receiver.h  sikreceiver_lookup_sender.h  sikreceiver_main_thread.h  sikreceiver_replies_receiver.h  sikreceiver_rexmit_requester.h  sikreceiver_shared_resource.h  sikreceiver_tcp_client_handler.cc  sikreceiver_tcp_client_handler.h  sikreceiver_tcp_codes_receiver.h  sikreceiver_tcp_manager.cc  sikreceiver_tcp_manager.h  sikreceiver_tcp_new_connections_listener.cc  sikreceiver_tcp_new_connections_listener.h  siksender_audio_mainsender.h  siksender_control_port_service.h  siksender_main_thread.h  siksender_rexmiter.h  siksender_shared_resource.h  smart_thread.cc  smart_thread.h  (+11 more)
